--- a/app/package.json
+++ b/app/package.json
@@ -71,7 +71,7 @@
     "@adonisjs/vite": "^4.0.0",
     "@atproto/tap": "^0.0.2",
     "@inertiajs/react": "^2.3.4",
-    "@thisismissem/adonisjs-atproto-tap": "file:.yalc/@thisismissem/adonisjs-atproto-tap",
+    "@thisismissem/adonisjs-atproto-tap": "^1.0.0",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
     "luxon": "^3.7.2",
