--- a/app/package.json
+++ b/app/package.json
@@ -14,11 +14,12 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
-    "lex:build": "pnpm lex build --clear --lexicons ../lexicons --out ./app/lexicons --pretty --fileExt '.ts' --importExt '.js'",
+    "lex:build": "pnpm lex build --clear --lexicons ../lexicons --out ./app/lexicons",
     "lex": "node_modules/.bin/lex"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
+    "#lexicons/*": "./app/lexicons/*.js",
     "#exceptions/*": "./app/exceptions/*.js",
     "#models/*": "./app/models/*.js",
     "#mails/*": "./app/mails/*.js",
@@ -71,7 +72,7 @@
     "@adonisjs/vite": "^4.0.0",
     "@atproto/tap": "^0.0.2",
     "@inertiajs/react": "^2.3.4",
-    "@thisismissem/adonisjs-atproto-tap": "^1.0.0",
+    "@thisismissem/adonisjs-atproto-tap": "^1.0.2",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
     "luxon": "^3.7.2",
