--- a/tap.env
+++ b/tap.env
@@ -1,3 +1,3 @@
-TAP_SIGNAL_COLLECTION=fyi.questionable.actor.profile
-TAP_COLLECTION_FILTERS=fyi.questionable.*
-TAP_ADMIN_PASSWORD=admin-password
+TAP_SIGNAL_COLLECTION="fyi.questionable.actor.profile"
+TAP_COLLECTION_FILTERS="fyi.questionable.*"
+TAP_ADMIN_PASSWORD="admin-password"
