--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "#controllers/*": "./app/controllers/*.js",
     "#lexicons/*": "./app/lexicons/*.js",
     "#exceptions/*": "./app/exceptions/*.js",
+    "#dtos/*": "./app/dtos/*.js",
     "#models/*": "./app/models/*.js",
     "#mails/*": "./app/mails/*.js",
     "#services/*": "./app/services/*.js",
