--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "node bin/server.js",
+    "changeset": "changeset",
     "prebuild": "pnpm lex:build",
     "build": "node ace build",
     "dev": "node ace serve --hmr --no-clear",
@@ -43,6 +44,8 @@
     "@adonisjs/prettier-config": "^1.4.4",
     "@adonisjs/tsconfig": "^1.4.0",
     "@atproto/lex": "^0.0.6",
+    "@changesets/changelog-github": "^0.5.2",
+    "@changesets/cli": "^2.29.8",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
