--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0-only",
   "scripts": {
     "start": "node bin/server.js",
-    "changeset": "changeset",
+    "changeset": "pnpm -w changeset",
     "prebuild": "pnpm lex:build",
     "build": "node ace build",
     "dev": "node ace serve --hmr --no-clear",
@@ -44,8 +44,6 @@
     "@adonisjs/prettier-config": "^1.4.4",
     "@adonisjs/tsconfig": "^1.4.0",
     "@atproto/lex": "^0.0.6",
-    "@changesets/changelog-github": "^0.5.2",
-    "@changesets/cli": "^2.29.8",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
