Add basic accounts and profiles (#1)
* Fix Tap not initializing correctly

* Switch back to inertia for HomeController

* Implement ingestion of accounts & profiles

* Implement very basic profile pages

* Add referential integrity between Accounts and Profiles

* Improve loading of accounts

* Add very basic styling

* Add trailing whitespace to tap.env

* Add Changesets for tracking changes

* Add changeset for adding accounts and profiles

* Move changesets to repo root

--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0-only",
   "scripts": {
     "start": "node bin/server.js",
+    "changeset": "pnpm -w changeset",
     "prebuild": "pnpm lex:build",
     "build": "node ace build",
     "dev": "node ace serve --hmr --no-clear",
@@ -14,12 +15,14 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
-    "lex:build": "pnpm lex build --clear --lexicons ../lexicons --out ./app/lexicons --pretty --fileExt '.ts' --importExt '.js'",
+    "lex:build": "pnpm lex build --clear --lexicons ../lexicons --out ./app/lexicons",
     "lex": "node_modules/.bin/lex"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
+    "#lexicons/*": "./app/lexicons/*.js",
     "#exceptions/*": "./app/exceptions/*.js",
+    "#dtos/*": "./app/dtos/*.js",
     "#models/*": "./app/models/*.js",
     "#mails/*": "./app/mails/*.js",
     "#services/*": "./app/services/*.js",
@@ -71,7 +74,7 @@
     "@adonisjs/vite": "^4.0.0",
     "@atproto/tap": "^0.0.2",
     "@inertiajs/react": "^2.3.4",
-    "@thisismissem/adonisjs-atproto-tap": "^1.0.0",
+    "@thisismissem/adonisjs-atproto-tap": "^1.0.2",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
     "luxon": "^3.7.2",
