Add basic implementation for OAuth

--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,9 @@
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@atproto/jwk-jose": "^0.1.11",
+    "@atproto/oauth-client": "^0.5.11",
+    "@atproto/oauth-client-node": "^0.3.13",
     "@atproto/tap": "^0.0.2",
     "@inertiajs/react": "^2.3.4",
     "@thisismissem/adonisjs-atproto-tap": "^1.0.2",
