--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
-    "lex:build": "pnpm lex build --clear --lexicons ../lexicons --out ./app/lexicons",
+    "lex:build": "pnpm lex build --clear --indexFile --lexicons ../lexicons --out ./app/lexicons",
     "lex": "node_modules/.bin/lex",
     "db:migrate": "node ace migration:run"
   },
@@ -45,7 +45,6 @@
     "@adonisjs/eslint-config": "^2.0.0",
     "@adonisjs/prettier-config": "^1.4.4",
     "@adonisjs/tsconfig": "^1.4.0",
-    "@atproto/lex": "^0.0.8",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
@@ -61,25 +60,26 @@
     "prettier": "^3.5.3",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "yalc": "1.0.0-pre.53"
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
     "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/inertia": "^3.1.1",
-    "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/lucid": "^21.8.2",
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@atproto-labs/simple-store": "^0.3.0",
     "@atproto/jwk-jose": "^0.1.11",
-    "@atproto/oauth-client": "^0.5.12",
-    "@atproto/oauth-client-node": "^0.3.14",
+    "@atproto/lex": "^0.0.11",
+    "@atproto/oauth-client-node": "^0.3.15",
     "@atproto/syntax": "^0.4.2",
     "@atproto/tap": "^0.0.2",
     "@inertiajs/react": "^2.3.4",
+    "@thisismissem/adonisjs-atproto-oauth": "^0.1.0",
     "@thisismissem/adonisjs-atproto-tap": "^1.0.2",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
