Add tailwindcss and shadcn UI for better UI design

--- a/app/inertia/tsconfig.json
+++ b/app/inertia/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "ESNext",
     "jsx": "react-jsx",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "@/*": ["./lib/*"]
     }
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
