--- a/app/package.json
+++ b/app/package.json
@@ -96,6 +96,7 @@
     "edge.js": "^6.2.1",
     "lucide-react": "^0.562.0",
     "luxon": "^3.7.2",
+    "motion": "^12.27.0",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
     "react": "^19.2.3",
