--- a/app/package.json
+++ b/app/package.json
@@ -61,7 +61,8 @@
     "ts-node-maintained": "^10.9.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "yalc": "1.0.0-pre.53"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
@@ -78,7 +79,7 @@
     "@atproto/lex": "^0.0.11",
     "@atproto/oauth-client-node": "^0.3.15",
     "@atproto/syntax": "^0.4.2",
-    "@atproto/tap": "^0.0.2",
+    "@atproto/tap": "^0.1.3",
     "@inertiajs/react": "^2.3.4",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -89,7 +90,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "@thisismissem/adonisjs-atproto-oauth": "^0.1.0",
-    "@thisismissem/adonisjs-atproto-tap": "^1.0.2",
+    "@thisismissem/adonisjs-atproto-tap": "^2.0.0",
     "@vinejs/vine": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
